--- a/main.tex
+++ b/main.tex
@@ -6,9 +6,17 @@
 % MATJAZ
 \usepackage{setspace}
 
+\title{
+ Bombastic paper title
+}
+\author{
+    Marko Po\v{z}enel, Matja\v{z} Kukar, ...
+}
+\date{\today}
+
 \begin{document}
 \doublespacing
-%\maketitle
+\maketitle
 
 \section{web server log}
 Information on user activity on the web server is located in the web server log file. Web server
